# follow_streams

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt  run.py
src/follow_streams/: __init__.py  main.py
