[project]
name = "follow-streams"
version = "0.1.0"
description = "Pretty Plots of Watersheds"
readme = "README.md"
authors = [
    { name = "Justin Hendrick", email = "justinjhendrick@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "geopandas==1.1.2",
    "matplotlib==3.10.8",
    "osmium==4.2.0",
]

[project.scripts]
follow-streams = "follow_streams:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "ty>=0.0.11",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "PTH", "UP"]
